fix positioning of card on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -260,7 +260,7 @@
     }
 
     .body {
-        position: absolute;
+        position: relative;
         top: 75px;
     }
 
